<resources>
    <string name="app_name" translatable="false">Switch My Slot</string>
    <string name="hal_version">HAL Version:</string>
    <string name="app_version">App Version: v0.7.1</string>
    <string name="number_of_slots">Number of slots:</string>
    <string name="current_slot_suffix">Current slot suffix:</string>
    <string name="switch_slot_to">Switch Slot to</string>
    <string name="current_slot">Current slot:</string>
    <string name="developed_by_shou">Developed by Shou</string>
    <string name="licensed_under_mit">Licensed under MIT</string>
    <string name="error_ab_device">This is not an A/B device!</string>
    <string name="error_min_api">The minimum compatible version of Android is Nougat (7.1)</string>
    <string name="error_bootctl_missing">Bootctl utility is missing.</string>
    <string name="error_root_required">Root access is required!</string>
    <string name="error_root_denied">Please grant the SU access.</string>
    <string name="dialog_confirmation">Do you want to switch the slot?</string>
    <string name="dialog_error_title">Error</string>
</resources>
